src/test/rustdoc-ui/issue-106226.stderr
error[E0308]: mismatched types
  --> $DIR/issue-106226.rs:2:14
   |
LL | type F = [_; ()];
   |              ^^ expected `usize`, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
